login with google authentication

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 GOOGLE_ID=572381995622-dbgptmgce0vtqa5pto61k87fqiv5rdna.apps.googleusercontent.com
 GOOGLE_SECRET=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
-NEXTAUTH_URL
-NEXTAUTH_SECRET
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=say_lalisa_love_me_lalisa_love_me_hey
