--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "dotenv": "^16.3.1",
+    "firebase": "^9.23.0",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
